[gd_scene load_steps=14 format=2]

[ext_resource path="res://Images/Characters/Enemies/Bee.png" type="Texture" id=1]
[ext_resource path="res://Script/CharacterScript/SlugEnemyScript.gd" type="Script" id=2]
[ext_resource path="res://Script/CharacterScript/SurviveEnemyScript.gd" type="Script" id=3]
[ext_resource path="res://Scene/Effects/EnemyPoof.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/GUI/HeartContainer.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 12, 12, 12, 12 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3.5, 3.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2.5, 2 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7, 6 )

[node name="BeeEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )
PoofVar = ExtResource( 4 )
HeartVar = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1 )
shape = SubResource( 6 )

[node name="SurviveEnemy" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SurviveEnemy"]
position = Vector2( 0, 1 )
shape = SubResource( 8 )
disabled = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="SurviveEnemy" to="." method="_on_SurviveEnemy_body_entered"]
